# GeodeMenu

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  about.md  changelog.md  lisense  mod-2.2074.json  mod.json  modules.txt
.github/workflows/: build-2.2074.yml  build.yml
build-android32/: CMakeCache.txt
include/: BlurAPI.hpp  CategoryExt.hpp  Events.hpp  FineOutline.hpp  Keybinds.hpp  ModuleExt.hpp  QOLModExt.cpp  QOLModExt.hpp  WindowExt.hpp  readme.md
include/src/: CategoryExt.cpp  ModuleExt.cpp
resources/: catppuccin-frappe.ini  ja-JP.json  label-help.md  midgahack.ini  pp-frag-android.glsl  pp-frag.glsl  pp-vert.glsl
resources/files/: label-help.md
resources/langs/: ja-JP.json
resources/shaders/: blur2.fsh  blur2.vsh  box_blur.fsh  gaussian-blur.fsh  pp-frag.glsl  pp-vert.glsl
src/: AttemptAtReversingDialogObject.h  Blur.cpp  Blur.hpp  ColonThree.cpp  FrameStepper.cpp  FrameStepper.h  ShopBypass.cpp  SolidWaveTrail.cpp  XDBotFix.cpp  include.h  main.cpp
src/Client/: AndroidBall.cpp  AndroidBall.h  AndroidUI.cpp  AndroidUI.h  ButtonModule.cpp  ButtonModule.hpp  ButtonModuleNode.cpp  ButtonModuleNode.hpp  CCContentSizeTo.h  CategoryNode.cpp  CategoryNode.hpp  Client.cpp  Client.h  ClientSetup.h  ClippingNode.h  ColourModule.cpp  ColourModule.hpp  ColourModuleNode.cpp  ColourModuleNode.hpp  ColourUtility.cpp  ColourUtility.h  DrawUtils.h  Dropdown.cpp  Dropdown.h  EnumModule.cpp  EnumModule.hpp  EnumModuleNode.cpp  EnumModuleNode.hpp  ExtensionManager.cpp  ExtensionManager.hpp  FloatSliderModule.cpp  FloatSliderModule.hpp  FloatSliderModuleNode.cpp  FloatSliderModuleNode.hpp  HitboxesModule.h  HookMacro.hpp  IconEffectWindow.cpp  IconEffectWindow.h  InputModule.cpp  InputModule.hpp  (+34 more)
src/CustomRewards/: CustomRewards.cpp  CustomRewards.hpp
src/CustomWindows/: Config.cpp  Config.h  IconEffects.cpp  IconEffects.h  Labels.cpp  Labels.h
src/Defines/: Platform.h
src/Fixes/: FontParsing.cpp  Test.cpp
src/GUI/: AndroidBall.cpp  AndroidBall.hpp  AndroidUI.cpp  AndroidUI.hpp  BackgroundSprite.cpp  BackgroundSprite.hpp  BetterAlertLayer.cpp  BetterAlertLayer.hpp  BetterButtonSprite.cpp  BetterButtonSprite.hpp  BetterInputNode.cpp  BetterInputNode.hpp  BetterMouseDispatcher.cpp  BetterMouseDispatcher.hpp  BetterRotationControl.cpp  BetterRotationControl.hpp  BetterScrollbar.cpp  BetterScrollbar.hpp  BetterSlider.cpp  BetterSlider.hpp  BlurLayer.cpp  BlurLayer.hpp  BoundingBoxClipNode.cpp  BoundingBoxClipNode.hpp  CategorySelectMenu.cpp  CategorySelectMenu.hpp  CategoryTabSprite.cpp  CategoryTabSprite.hpp  DropdownList.cpp  DropdownList.hpp  EasyBG.cpp  EasyBG.hpp  EditKeyConfigUI.cpp  EditKeyConfigUI.hpp  EditLayoutUI.cpp  EditLayoutUI.hpp  ExtraThemeSettingsUI.cpp  ExtraThemeSettingsUI.hpp  GrabNodeLayer.cpp  GrabNodeLayer.hpp  (+30 more)
src/Hacks/: AccuratePercentage.cpp  AllModesPlatformer.cpp  AllowPauseBuffering.cpp  AnticheatBypass.cpp  AutoClicker.cpp  AutoCollectCoins.cpp  AutoLDM.cpp  AutoPractice.cpp  AutoSongDownload.cpp  BallRotation.cpp  ChestOpenBypass.cpp  ChoppyTrail.cpp  ClassicParticles.cpp  CloseEndLevelLayer.cpp  CoinTracers.cpp  CoinsInPractice.cpp  CommentHistory.cpp  ConditionalRetry.cpp  CopyHack.cpp  DecemberSnow.cpp  DontFade.cpp  EditorWaveTrail.cpp  EndScreenCheatIndicator.cpp  FPSMultiplier.cpp  FireInTheHole.cpp  FixedMonsterHitboxes.cpp  ForceGhost.cpp  ForcePlatformer.cpp  ForceTrail.cpp  ForceVisibility.cpp  FrameStepper.cpp  FreeMove.cpp  FreeScroll.cpp  FreezeAttempts.cpp  FullOptions.cpp  GamemodeSwitcher.cpp  GlobedSecret.cpp  GoldUserCoins.cpp  HidePauseButton.cpp  HidePauseMenu.cpp  (+83 more)
src/IconEffects/: IconEffectsUI.cpp  IconEffectsUI.hpp  IconicCommon.hpp  IconicConfig.cpp  IconicConfig.hpp  IconicManager.cpp  IconicManager.hpp  IconicPlayerHook.cpp  IconicPlayerHook.hpp
src/Keybinds/: FuncKeybindStruct.cpp  FuncKeybindStruct.hpp  Hooks.cpp  Hooks.hpp  KeyConfigStruct.cpp  KeyConfigStruct.hpp  KeyInfoPopup.cpp  KeyInfoPopup.hpp  KeyState.hpp  KeyStruct.cpp  KeyStruct.hpp  KeybindManager.cpp  KeybindManager.hpp  KeybindStruct.cpp  KeybindStruct.hpp  KeybindsUI.cpp  KeybindsUI.hpp  ModuleKeybindStruct.cpp  ModuleKeybindStruct.hpp  ModuleKeybinds.cpp  ModuleKeybinds.hpp  RecordKeyPopup.cpp  RecordKeyPopup.hpp  RecordKeyStruct.cpp  RecordKeyStruct.hpp  SetBindSetting.cpp  SetBindSetting.hpp
src/Labels/: BestRun.cpp  BestRun.hpp  CustomFuncs.cpp  Hooks.cpp  Hooks.hpp  LabelAnchor.hpp  LabelCommon.hpp  LabelConfig.cpp  LabelConfig.hpp  LabelEvent.cpp  LabelHooks.cpp  LabelHooks.hpp  LabelLayer.cpp  LabelLayer.hpp  LabelManager.cpp  LabelManager.hpp  LabelModule.cpp  LabelModule.hpp  LabelNode.cpp  LabelNode.hpp  LabelUtils.cpp  LabelUtils.hpp  Labels.cpp  (+5 more)
(+530 files in other folders)
